# SaSGC

./: README.md  pyproject.toml
src/sasgc/: sasgc.py
