[project]
name = "sasgc"
version = "0.1.0"
description = "Generate git commit messages from staged changes using a local Ollama model"
authors = [
    {name = "GianlucaHex",email = "gianlucamastrolonardo10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)"
]

[tool.poetry]
packages = [{include = "sasgc", from = "src"}]

[tool.poetry.scripts]
sasgc = "sasgc.sasgc:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
